fix: adjust z-index values for task column elements and nav margin

--- a/kanban-board/style.css
+++ b/kanban-board/style.css
@@ -120,8 +120,7 @@ section .task-column .heading {
     padding: var(--padding-m);
     background-color: #1a1a1a7c;
     backdrop-filter: blur(5px);
-    position: sticky; 
-    z-index: 10;
+    z-index: 1;
 }
 
 section .task-column .task {
@@ -175,6 +174,7 @@ section .task-column .task .actions .delete {
     display: none;
     align-items: center;
     justify-content: center;
+    z-index: 2;
 }
 
 .modal.active {
@@ -197,7 +197,7 @@ section .task-column .task .actions .delete {
     display: flex;
     flex-direction: column;
     gap: var(--padding-m);
-    z-index: 10;
+    z-index: 3;
 }
 
 .modal .center input,
@@ -225,11 +225,12 @@ textarea {
 }
 
 @media (max-width: 480px) {
-    nav{
+    nav {
         height: 8%;
-        margin-bottom: -0.5rem;
+        margin-bottom: -0.6rem;
         padding-inline: 0.75rem;
     }
+
     section {
         height: 92%;
         flex-direction: column;
